--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # default config
-baseurl = "https://examplesite.org"
+baseurl = "https://aadyasharma.in"
 languageCode = "en-us"
-title = "Parsa Hugo | Personal Blog Template"
+title = "Aadya Sharma"
 theme = "parsa-hugo"
 summaryLength = "10"
 paginate = 6
